# Document-Processing-Tool-

./: GIT_PUSH_GUIDE.md  README.md
.monkeycode/specs/2026-02-26-document-processor/: design.md  requirements.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  annotation.py  batch.py  conversion.py  merge.py  page.py  search.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  annotation.py  document.py  page.py
backend/app/services/: __init__.py  annotation_service.py  batch_service.py  conversion_service.py  merge_service.py  page_service.py  search_service.py
backend/app/services/converters/: __init__.py  excel_to_pdf.py  images_to_pdf.py  images_to_ppt.py  pdf_merge.py  pdf_to_excel.py  pdf_to_images.py  pdf_to_ppt.py  pdf_to_word.py  ppt_to_pdf.py  word_to_pdf.py
backend/app/utils/: __init__.py  file_utils.py  format_utils.py
backend/storage/annotations/: annotations.json
backend/storage/db/search_index/: _MAIN_0.toc
backend/storage/uploads/: .gitkeep
backend/tests/: conftest.py  test_conversion.py  test_merge.py  test_utils.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/annotation/: AnnotationPanel.vue
frontend/src/components/common/: LoadingSpinner.vue
frontend/src/components/page/: PageManager.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: document.ts  merge.ts
frontend/src/types/: index.ts
frontend/src/views/: AnnotationView.vue  BatchView.vue  ConversionView.vue  HomeView.vue  MergeView.vue  PageManagementView.vue  PageView.vue  SearchView.vue
frontend/src/views/status/: StatusView.vue
