[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-processor"
version = "0.1.0"
description = "文档处理工具 - 支持PDF、Word、Excel、PPT、图片的转换、检索、批注和拼接"
authors = [{name = "Document Processor Team", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.10.3",
    "reportlab>=4.0.9",
    "python-docx>=1.1.0",
    "docx2pdf>=0.1.8",
    "openpyxl>=3.1.2",
    "pandas>=2.1.4",
    "python-pptx>=0.6.23",
    "pillow>=10.2.0",
    "whoosh>=2.7.4",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
